# NovoMD

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  SCIENCE.md  SECURITY.md  gradio_app.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deploy-space.yml  publish.yml
benchmarks/: run.py
datasets/: README.md  generate_sample_descriptors.py  sample_descriptors.csv
docs/: benchmark_report.md
examples/: 04_batch_processing.ipynb
huggingface/: Dockerfile  README.md  app.py  requirements.txt
novomd/: __about__.py  __init__.py  batch.py  cli.py  conversion.py  core.py  ensemble.py  exceptions.py  interpret.py  report.py
skills/: README.md
skills/novomd/: SKILL.md
tests/: test_batch.py  test_cli.py  test_ensemble.py  test_interpret.py  test_package.py  test_report.py
