[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novomd"
dynamic = ["version"]
description = "Local-first molecular property calculator. Compute descriptors from SMILES with no server and no API key."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "NovoMCP"}
]
keywords = [
    "molecular-dynamics",
    "computational-chemistry",
    "cheminformatics",
    "molecular-descriptors",
    "smiles",
    "openmd",
    "rdkit",
    "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: FastAPI",
]

# Core dependencies: a bare `pip install novomd` is a working local calculator.
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "rdkit>=2023.3.1",
]

[project.optional-dependencies]
# REST service: `pip install novomd[server]`
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/realariharrison/NovoMD"
Documentation = "https://github.com/realariharrison/NovoMD#readme"
Repository = "https://github.com/realariharrison/NovoMD.git"
Issues = "https://github.com/realariharrison/NovoMD/issues"

[project.scripts]
novomd = "novomd.cli:main"

[tool.setuptools.dynamic]
version = {attr = "novomd.__about__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["novomd*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["novomd"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true

# RDKit ships type stubs that some mypy versions cannot parse; treat it as
# untyped rather than analyzing its stub files.
[[tool.mypy.overrides]]
module = "rdkit.*"
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", "conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used - OK in tests
